tests/ui/traits/non_lifetime_binders/on-ptr.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/on-ptr.rs:3:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: late-bound type parameter not allowed on function pointer types
  --> $DIR/on-ptr.rs:6:17
   |
LL | fn foo() -> for<T> fn(T) {
   |                 ^

error: aborting due to previous error; 1 warning emitted

